@@ -566,6 +566,13 @@ var vboxChooser = {
 						mode: 'menu'
 					},
 					function(a) {
+						
+						// Check for unfinished progress operations
+						if($('#vboxProgressOps').children('div:not(.vboxProgressComplete)').addClass('vboxProgressRunning').length) {
+							vboxAlert('Cannot change servers while operations are in progress');
+							return;
+						}
+						
 						if(a == $('#vboxPane').data('vboxConfig').name) return;						
 						
 						// Show loading screen
